--- a/RmarkdownFinalProject.Rmd
+++ b/RmarkdownFinalProject.Rmd
@@ -9,7 +9,29 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(usmap)
 
-load("https://github.com/nbiler/Data-and-Society-Final/raw/refs/heads/main/NSDUH%20dataset/NSDUH_2023.Rdata")
+
 ```
+
+```{r}
+# Example device variable
+device <- "Mac"  # or "PC"
+
+# Create logical variables
+is_mac <- device == "Mac"
+is_pc <- device == "PC"
+```
+
+```{r, eval = is_mac}
+#For Mac
+load("~/Documents/GitHub/Data-and-Society-Final/NSDUH dataset/NSDUH_2023.Rdata")
+```
+
+```{r, eval = is_pc}
+#For PC
+load("~/GitHub/Data-and-Society-Final/NSDUH dataset/NSDUH_2023.Rdata")
+
+```
+
+
 
 
